--- a/.gitignore
+++ b/.gitignore
@@ -29,11 +29,18 @@ lerna-debug.log*
 *.sublime-workspace
 
 # IDE - VSCode
-.vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 # dotenv environment variable files
 .env
-docker.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
 
 # temp directory
 .temp
