--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,13 +16,6 @@
     "noImplicitAny": true,
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "paths": {
-      "@auth/*": ["src/auth/*"],
-      "@database/*": ["src/database/*"],
-      "@users/*": ["src/users/*"],
-      "@utils/*": ["src/utils/*"],
-      "@/*": ["src/*"]
-    }
+    "noFallthroughCasesInSwitch": true
   }
 }
