--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.4.0"
   },
